<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_help">Help</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="add">Add</string>
    <string name="empty_bookmark_msg">Please click above\nbookmark button to add</string>
    <string name="bookmark">Bookmark</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="_5_day_forecast">5-day forecast</string>
    <string name="waiting_for_location">Waiting for location...</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reset_bookmarked_list">Reset bookmarked list</string>
    <string name="reset_bookmarked_confirm_msg">Are you sure, you want to reset your bookmarked list?</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="_5_days_data_loading">5 days data loading</string>
    <string name="weather">Weather</string>
    <string name="city_loading">Wait cities loading...</string>
    <string name="search">Search city</string>
    <string name="added_to_bookmark">Added to bookmark list successfully</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>