<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xtensolutions.weatherapp.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/home_to_bookmark"
            app:destination="@id/fragment_bookmark"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

        <action
            android:id="@+id/home_to_city_weather"
            app:destination="@id/fragment_city_weather"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

        <action
            android:id="@+id/home_to_search"
            app:destination="@id/fragment_search_city"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />

    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.xtensolutions.weatherapp.ui.fragment.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.xtensolutions.weatherapp.ui.fragment.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/fragment_bookmark"
        android:name="com.xtensolutions.weatherapp.ui.fragment.BookmarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmark_map" />

    <fragment
        android:id="@+id/fragment_city_weather"
        android:name="com.xtensolutions.weatherapp.ui.fragment.CityWeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_city_weather">
        <argument
            android:name="city"
            app:argType="com.xtensolutions.weatherapp.room.model.BookmarkCity" />
    </fragment>

    <fragment
        android:id="@+id/fragment_search_city"
        android:name="com.xtensolutions.weatherapp.ui.fragment.SearchCityFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_cities" />
</navigation>