<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="current"
            type="com.xtensolutions.weatherapp.data.model.WeatherData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_screen_bg"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".ui.fragment.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_action_item_current_bg"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtCurrentCity"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{current.name}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgCurrentWwatherIcon"
                    iconUrl="@{current.weather.get(0).iconUrl()}"
                    android:layout_width="@dimen/weather_icon_size"
                    android:layout_height="@dimen/weather_icon_size"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtMainSky"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgCurrentWwatherIcon"
                    android:text="@{current.weather.get(0).main}"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtWaitingForLocation"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_location"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_home"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/bookmarked"
            android:textColor="@color/white_80"
            app:layout_constraintBottom_toTopOf="@id/bookmarkedListContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookmarkMore"
            style="@style/IconBtn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:icon="@drawable/ic_add_more_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentContainer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            style="@style/IconBtn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            app:icon="@drawable/ic_search"
            app:layout_constraintEnd_toStartOf="@id/btnBookmarkMore"
            app:layout_constraintTop_toBottomOf="@id/currentContainer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bookmarkedListContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBookmarkMore">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookmarkedList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/row_item_bookmark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBookmark"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_bookmark_msg"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:visibility="gone"
                app:icon="@drawable/ic_add_more_location"
                app:iconGravity="top"
                app:iconPadding="@dimen/activity_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>